--- a/generators/component/Component.stories.tsx.hbs
+++ b/generators/component/Component.stories.tsx.hbs
@@ -12,7 +12,7 @@ const meta: Meta = {
 
 export default meta;
 
-const Template: Story = (props) => <{{ properCase name }} {...props}>Hello</{{ properCase name }}>;
+const Template: Story = (props) => <{{ properCase name }} {...props} />;
 
 export const Default = Template.bind({});
 Default.args = {};
