--- a/generators/component/Component.tsx.hbs
+++ b/generators/component/Component.tsx.hbs
@@ -3,7 +3,7 @@ import * as React from "react";
 // eslint-disable-next-line @typescript-eslint/no-unused-vars 
 export type {{properCase name}}Props = {}
 
-export const {{properCase name}} = (props:{{properCase name}}Props) => { 
+export const {{properCase name}}:React.FC<{{properCase name}}Props> = ({}) => { 
 	return (
 			<div>
 				{{properCase name}}
